Now set XVIDEO_LIBS only if the Xv library is found.  Fixed matroska check so that it doesn't stop the configure if i...
Original commit message from CVS:
Now set XVIDEO_LIBS only if the Xv library is found.  Fixed matroska check
so that it doesn't stop the configure if it fails.

--- a/gst-plugins-bad/configure.ac
+++ b/gst-plugins-bad/configure.ac
@@ -425,17 +425,23 @@ GST_CHECK_FEATURE(XVIDEO, [X11 XVideo extensions], xvideosink-Xv, [
     AC_CHECK_LIB(Xv_pic, XvQueryExtension,
 		 HAVE_XVIDEO="yes", HAVE_XVIDEO="no",
 		 $X_LIBS $X_PRE_LIBS -lXext -lX11 $X_EXTRA_LIBS)
-    XVIDEO_LIBS="-lXv_pic -lXext"
 
-    dnl try again using something else if we didn't find it first
-    if test x$HAVE_XVIDEO = xno; then
-      AC_CHECK_LIB(Xv, XvQueryExtension,
+    if test x$HAVE_XVIDEO = xyes; then
+      XVIDEO_LIBS="-lXv_pic -lXext"
+      AC_SUBST(XVIDEO_LIBS)
+    else
+      dnl try again using something else if we didn't find it first
+      if test x$HAVE_XVIDEO = xno; then
+        AC_CHECK_LIB(Xv, XvQueryExtension,
 		   HAVE_XVIDEO="yes", HAVE_XVIDEO="no",
 		   $X_LIBS $X_PRE_LIBS -lXext -lX11 $X_EXTRA_LIBS)
-      XVIDEO_LIBS="-lXv -lXext"
-    fi
 
-    AC_SUBST(XVIDEO_LIBS)
+        if test x$HAVE_XVIDEO = xyes; then
+          XVIDEO_LIBS="-lXv -lXext"
+          AC_SUBST(XVIDEO_LIBS)
+        fi
+      fi
+    fi
   fi
 ])
 
