actually recurse into sndfile if we are able big ladspa cleanups, mainly to comply with the buffer-frames caps proper...
Original commit message from CVS:
* actually recurse into sndfile if we are able
* big ladspa cleanups, mainly to comply with the buffer-frames caps property, but also general
cleanups
- the samplerate prop is gone, if you want to set it explicitly (as in for get-based plugins)
you need to use a filtered connection, just like with buffer-frames
* big float2int and int2float changes for buffer-frames compatibility - I think it's quite a bit
simpler
* make the ossclock general, add it to gstaudio, and use it in sndfile as well

i need to update mimetypes, but that's coming soon. there are some other plugins that don't
support buffer-frames, i guess i need to get around to fixing them as well.

--- a/gst-plugins-good/sys/oss/Makefile.am
+++ b/gst-plugins-good/sys/oss/Makefile.am
@@ -8,7 +8,6 @@ libgstossaudio_la_SOURCES = gstosssink.c 	\
 			    gstosssrc.c  	\
 			    gstossaudio.c 	\
 			    gstossgst.c 	\
-			    gstossclock.c 	\
 			    gstosscommon.c
 
 libgstossaudio_la_CFLAGS = $(GST_CFLAGS)
@@ -18,4 +17,4 @@ libgstossaudio_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstosshelper_la_SOURCES = gstosshelper.c
 libgstosshelper_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
-noinst_HEADERS = gstosssink.h gstosssrc.h gstossgst.h gstossclock.h gstosshelper.h gstosscommon.h
+noinst_HEADERS = gstosssink.h gstosssrc.h gstossgst.h gstosshelper.h gstosscommon.h
