Detect SPEEX_LIBS and SPEEX_CFLAGS in configure, and use them here
Original commit message from CVS:
Detect SPEEX_LIBS and SPEEX_CFLAGS in configure, and use them here

--- a/gst-plugins-good/ext/speex/Makefile.am
+++ b/gst-plugins-good/ext/speex/Makefile.am
@@ -3,8 +3,8 @@ plugindir = $(libdir)/gst
 plugin_LTLIBRARIES = libgstspeex.la
 
 libgstspeex_la_SOURCES = gstspeex.c gstspeexdec.c gstspeexenc.c
-libgstspeex_la_CFLAGS = $(GST_CFLAGS)
-libgstspeex_la_LIBADD = -lspeex
+libgstspeex_la_CFLAGS = $(GST_CFLAGS) $(SPEEX_CFLAGS)
+libgstspeex_la_LIBADD = $(SPEEX_LIBS)
 libgstspeex_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
 noinst_HEADERS = gstspeexenc.h gstspeexdec.h 
