remove mask statement from %post as it is not supported anymore
Original commit message from CVS:
remove mask statement from %post as it is not supported anymore

--- a/gstreamer/gstreamer.spec.in
+++ b/gstreamer/gstreamer.spec.in
@@ -127,7 +127,7 @@ rm -f $RPM_BUILD_ROOT%{_libdir}/*.la
 
 %post
 /sbin/ldconfig
-%{_bindir}/gst-register --gst-mask=0 > /dev/null 2> /dev/null
+%{_bindir}/gst-register > /dev/null 2> /dev/null
 
 %postun
 /sbin/ldconfig
