fix it so that the SPEEX plugin gets disted
Original commit message from CVS:
fix it so that the SPEEX plugin gets disted

--- a/gst-plugins-bad/ext/Makefile.am
+++ b/gst-plugins-bad/ext/Makefile.am
@@ -262,6 +262,12 @@ else
 SNAPSHOT_DIR=
 endif
 
+if USE_SPEEX
+SPEEX_DIR=speex
+else
+SPEEX_DIR=
+endif
+
 SUBDIRS=$(A52DEC_DIR) $(AALIB_DIR) $(ALSA_DIR) \
 	$(ARTS_DIR) $(ARTSC_DIR) $(AUDIOFILE_DIR) \
 	$(CDPARANOIA_DIR) $(DIVX_DIR) \
@@ -274,7 +280,7 @@ SUBDIRS=$(A52DEC_DIR) $(AALIB_DIR) $(ALSA_DIR) \
 	$(MPEG2DEC_DIR) $(PANGO_DIR) $(RAW1394_DIR) \
 	$(SDL_DIR) $(SHOUT_DIR) $(SIDPLAY_DIR) \
 	$(SMOOTHWAVE_DIR) $(SNDFILE_DIR) $(SWFDEC_DIR) $(TARKIN_DIR) \
-	$(VORBIS_DIR) $(XVID_DIR) $(SNAPSHOT_DIR)
+	$(VORBIS_DIR) $(XVID_DIR) $(SNAPSHOT_DIR) $(SPEEX_DIR)
 
 DIST_SUBDIRS=\
 	a52dec aalib alsa arts artsd \
