make sure esdmon.h gets disted
Original commit message from CVS:
make sure esdmon.h gets disted

--- a/gst-plugins-good/ext/esd/Makefile.am
+++ b/gst-plugins-good/ext/esd/Makefile.am
@@ -7,5 +7,5 @@ libgstesd_la_CFLAGS = $(GST_CFLAGS) $(ESD_CFLAGS)
 libgstesd_la_LIBADD = $(ESD_LIBS)
 libgstesd_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
-noinst_HEADERS = esdsink.h
+noinst_HEADERS = esdsink.h esdmon.h
 EXTRA_DIST = README
