famedec is not actually implemented.  (it'd just a copy of fameenc.)
Original commit message from CVS:
famedec is not actually implemented.  (it'd just a copy of fameenc.)

--- a/gst-plugins-bad/ext/libfame/Makefile.am
+++ b/gst-plugins-bad/ext/libfame/Makefile.am
@@ -2,9 +2,9 @@ plugindir = $(libdir)/gstreamer-@GST_MAJORMINOR@
 
 plugin_LTLIBRARIES = libgstlibfame.la
 
-libgstlibfame_la_SOURCES = gstlibfame.c	gstfamedec.c
+libgstlibfame_la_SOURCES = gstlibfame.c
 libgstlibfame_la_CFLAGS = $(GST_CFLAGS)
 libgstlibfame_la_LIBADD = $(LIBFAME_LIBS) 
 libgstlibfame_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
-noinst_HEADERS=gstlibfame.h gstfamedec.h
+noinst_HEADERS=gstlibfame.h
