--- a/gst-plugins-base/examples/indexing/Makefile.am
+++ b/gst-plugins-base/examples/indexing/Makefile.am
@@ -3,5 +3,5 @@ examples = indexmpeg
 noinst_PROGRAMS = $(examples)
 
 # we have nothing but apps here, we can do this safely
-LIBS = $(GST_LIBS) $(GTK_LIBS) $(FT2_LIBS)
+LIBS = $(GST_LIBS) $(GTK_LIBS)
 AM_CFLAGS = $(GST_CFLAGS) $(GTK_CFLAGS)
