Add include dir for gst-libs/ext/mplex
Original commit message from CVS:
Add include dir for gst-libs/ext/mplex

--- a/gst-plugins-bad/ext/mplex/Makefile.am
+++ b/gst-plugins-bad/ext/mplex/Makefile.am
@@ -3,7 +3,7 @@ plugindir = $(libdir)/gstreamer-@GST_MAJORMINOR@
 plugin_LTLIBRARIES = libgstmplex.la
 
 libgstmplex_la_SOURCES = gstmplex.cc
-libgstmplex_la_CXXFLAGS = $(GST_CFLAGS) 
+libgstmplex_la_CXXFLAGS = $(GST_CFLAGS) -I$(top_srcdir)/gst-libs/ext/mplex/
 libgstmplex_la_LIBADD = -lstdc++ $(LIBM_LIBS) $(top_builddir)/gst-libs/ext/mplex/libmplex.la
 libgstmplex_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 
