--- a/gst-plugins-good/ext/Makefile.am
+++ b/gst-plugins-good/ext/Makefile.am
@@ -184,6 +184,12 @@ else
 MPEG2DEC_DIR=
 endif
 
+if USE_MPLEX
+MPLEX_DIR=mplex
+else
+MPLEX_DIR=
+endif
+
 if USE_PANGO
 PANGO_DIR=pango
 else
@@ -277,7 +283,7 @@ SUBDIRS=$(A52DEC_DIR) $(AALIB_DIR) $(ALSA_DIR) \
 	$(LADSPA_DIR) $(LAME_DIR) $(LCS_DIR) \
 	$(LIBDV_DIR) $(LIBFAME_DIR) $(LIBPNG_DIR) \
 	$(MAD_DIR) $(MATROSKA_DIR) $(MIKMOD_DIR) \
-	$(MPEG2DEC_DIR) mplex $(PANGO_DIR) $(RAW1394_DIR) \
+	$(MPEG2DEC_DIR) $(MPLEX_DIR) $(PANGO_DIR) $(RAW1394_DIR) \
 	$(SDL_DIR) $(SHOUT_DIR) $(SIDPLAY_DIR) \
 	$(SMOOTHWAVE_DIR) $(SNDFILE_DIR) $(SWFDEC_DIR) $(TARKIN_DIR) \
 	$(VORBIS_DIR) $(XVID_DIR) $(SNAPSHOT_DIR) $(SPEEX_DIR)
