Make mplex build dependent on USE_MPLEX
Original commit message from CVS:
Make mplex build dependent on USE_MPLEX

--- a/gst-plugins-bad/gst-libs/ext/mplex/Makefile.am
+++ b/gst-plugins-bad/gst-libs/ext/mplex/Makefile.am
@@ -1,6 +1,12 @@
 
 EXTRA_DIST = README INSTRUCT TODO
 
+if USE_MPLEX
+MPLEX_LIB = libmplex.la
+else
+MPLEX_LIB = 
+endif
+
 noinst_LTLIBRARIES = libmplex.la
 
 libmplex_la_SOURCES = \
