Fix installing plugin in wrong dir
Original commit message from CVS:
Fix installing plugin in wrong dir

--- a/gstreamer/examples/plugins/Makefile.am
+++ b/gstreamer/examples/plugins/Makefile.am
@@ -1,5 +1,5 @@
 ## we need to specify the plugindir if we want libtool to build .so files ...
-plugindir=$(libdir)/gst
+plugindir=$(libdir)/gstreamer-@GST_MAJORMINOR@
 
 plugin_LTLIBRARIES = libgstexample.la 
 
