putbits removed because of licensing concerns.  Code was moved back to the plugins it was derived from.
Original commit message from CVS:
putbits removed because of licensing concerns.  Code was moved
back to the plugins it was derived from.

--- a/gstreamer/libs/gst/Makefile.am
+++ b/gstreamer/libs/gst/Makefile.am
@@ -1,3 +1,3 @@
-SUBDIRS = bytestream control getbits putbits
+SUBDIRS = bytestream control getbits
 
-DIST_SUBDIRS = bytestream control getbits putbits
+DIST_SUBDIRS = bytestream control getbits
