--- a/gst-plugins-good/gst/wavparse/Makefile.am
+++ b/gst-plugins-good/gst/wavparse/Makefile.am
@@ -1,7 +1,7 @@
 
 plugin_LTLIBRARIES = libgstwavparse.la
 
-libgstwavparse_la_SOURCES = gstwavparse.c gstriff.c
+libgstwavparse_la_SOURCES = gstwavparse.c
 libgstwavparse_la_CFLAGS = $(GST_CFLAGS)
 libgstwavparse_la_LIBADD =
 libgstwavparse_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
