--- a/gstreamer/gst/parse/Makefile.am
+++ b/gstreamer/gst/parse/Makefile.am
@@ -13,7 +13,7 @@ libgstparse_la_LIBADD = $(LIBGST_LIBS)
 noinst_HEADERS = grammar.tab.h
 
 grammar.tab.c grammar.tab.h: grammar.y ../gstmarshal.h
-	$(BISON_PATH) -d -v -p_gst_parse__yy $(srcdir)/grammar.y
+	$(BISON_PATH) -d -v -p_gst_parse__yy $(srcdir)/grammar.y -o grammar.tab.c
  
 lex._gst_parse_yy.c: parse.l
 	$(FLEX_PATH) -P_gst_parse_yy $^
