Move man pages from %.1 to %.1.in, and add a rule to make .1 files from .1.in, replacing program names with their ver...
Original commit message from CVS:
Move man pages from %.1 to %.1.in, and add a rule to make .1 files
from .1.in, replacing program names with their versioned equivalent.
Handles nroff escape code for - (\-).

--- a/gstreamer/tools/Makefile.am
+++ b/gstreamer/tools/Makefile.am
@@ -10,6 +10,17 @@ else
 GST_LOADSAVE_SRC = gst-compprep gst-xmllaunch gst-complete
 endif
 
+manpages = gst-launch.1 gst-md5sum.1 gst-register.1 gst-inspect.1 \
+	gst-complete.1 gst-compprep.1 gst-xmllaunch.1 \
+	gst-feedback.1
+
+CLEANFILES = $(manpages)
+man_MANS = $(manpages)
+EXTRA_DIST = gst-launch.1.in gst-md5sum.1.in gst-register.1.in gst-inspect.1.in \
+	gst-complete.1.in gst-compprep.1.in gst-xmllaunch.1.in \
+	gst-feedback.1.in
+EXTRA_DIST += gst-feedback
+
 bin_PROGRAMS = 	gst-launch 		\
 		$(GST_REGISTRY_SRC) 	\
 		gst-inspect 		\
@@ -20,9 +31,18 @@ bin_PROGRAMS = 	gst-launch 		\
 
 bin_SCRIPTS = gst-feedback
 
-man_MANS = gst-launch.1 gst-md5sum.1 gst-register.1 gst-inspect.1 \
-	gst-complete.1 gst-compprep.1 gst-xmllaunch.1 \
-	gst-feedback.1
+SUFFIXES = .1 .1.in
+.1.in.1:
+	sed \
+		-e s,gst.-complete,`echo gst-complete | sed $(program_transform_name) | sed s/-/\\-/`,g \
+		-e s,gst.-compprep,`echo gst-compprep | sed $(program_transform_name) | sed s/-/\\-/`,g \
+		-e s,gst.-feedback,`echo gst-feedback | sed $(program_transform_name) | sed s/-/\\-/`,g \
+		-e s,gst.-inspect,`echo gst-inspect | sed $(program_transform_name) | sed s/-/\\-/`,g \
+		-e s,gst.-launch,`echo gst-launch | sed $(program_transform_name) | sed s/-/\\-/`,g \
+		-e s,gst.-md5sum,`echo gst-md5sum | sed $(program_transform_name) | sed s/-/\\-/`,g \
+		-e s,gst.-register,`echo gst-register | sed $(program_transform_name) | sed s/-/\\-/`,g \
+		-e s,gst.-xmllaunch,`echo gst-xmllaunch | sed $(program_transform_name) | sed s/-/\\-/`,g \
+		$< >$@
 
 gst_launch_LDADD = $(GST_LIBS) #-lefence
 gst_launch_CFLAGS = $(GST_CFLAGS) -DGST_CONFIG_DIR=\"$(GST_CONFIG_DIR)\" \
@@ -63,4 +83,3 @@ gst_xmllaunch_CFLAGS = $(GST_CFLAGS) -DGST_CONFIG_DIR=\"$(GST_CONFIG_DIR)\" \
 	-DGST_CACHE_DIR=\""$(GST_CACHE_DIR)"\" 
 endif
 
-EXTRA_DIST = $(man_MANS) gst-feedback
