--- a/gstreamer/tools/.gitignore
+++ b/gstreamer/tools/.gitignore
@@ -11,6 +11,15 @@ gst-compprep
 gst-inspect
 gst-launch
 gst-register
+gst-typefind
 gst-xmlinspect
 gst-xmllaunch
 gst-md5sum
+gst-complete.1
+gst-compprep.1
+gst-feedback.1
+gst-inspect.1
+gst-launch.1
+gst-md5sum.1
+gst-register.1
+gst-xmllaunch.1
