--- a/gstreamer/examples/manual/.gitignore
+++ b/gstreamer/examples/manual/.gitignore
@@ -5,7 +5,6 @@ Makefile.in
 *.la
 .deps
 .libs
-
 dynamic
 dynamic.c
 gnome
@@ -20,4 +19,8 @@ threads
 threads.c
 xml-mp3
 xml-mp3.c
+xml.c
+xml
+xmlTest.gst
+README
 
