--- a/gstreamer/.gitignore
+++ b/gstreamer/.gitignore
@@ -14,6 +14,7 @@ gstreamer-config
 gstreamer.pc
 gstreamer-uninstalled.pc
 gstreamer.spec
+gst-element-check-*.m4
 libtool
 ltconfig
 ltmain.sh
@@ -22,6 +23,7 @@ stamp-h
 stamp-h.in
 stamp.h
 autom4te.cache
+autom4te-2.53.cache
 stamp-h1
 autoregen.sh
 compile
